--- a/HTML/analyze.html
+++ b/HTML/analyze.html
@@ -11,6 +11,8 @@
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
 
 <script src="javascript/parseLog.js"></script>
+<script src="javascript/stats.js"></script>
+
 
 
 </head>
@@ -19,10 +21,12 @@
     <svg style="height:500px"></svg>
   </div> -->
   <section>
-<div id="container" style="width:85%; height:400px; float:left"></div>
-<div id="details" style="margin: 5px; height:400px; overflow-x: scroll;"></div>
-<div id="shuffleWrite" style="width:85%; height:400px; float:left"></div>
-<div id="tasksTime" style="width:85%; height:400px; float:left"></div>
+<div id="container" style="width:85%; height:500px; float:left"></div>
+<div id="details" style="margin: 5px; height:500px; overflow-x: scroll;"></div>
+<div id="shuffleWrite" style="width:85%; height:500px; float:left"></div>
+<div id="tasksTime" style="width:85%; height:500px; float:left"></div>
+<div id="boxplot" style="width:85%; height:500px; float:left"></div>
+
 
 
 </section>
