--- a/HTML/analyze.html
+++ b/HTML/analyze.html
@@ -14,6 +14,9 @@
 <script src="javascript/handlebars-v3.0.3.js"></script>
 <script src="javascript/tablesort.min.js"></script>
 <script src='javascript/tablesort.numeric.js'></script>
+<script src='javascript/table2CSV.js'></script>
+
+
 <style>
 th.sort-header::-moz-selection { background:transparent; }
 th.sort-header::selection      { background:transparent; }
@@ -78,6 +81,7 @@ th {
       <div id="boxplot" style="width:85%; height:500px; float:left"></div>
     </div>
    <div class="tab-pane" id="table" style="width:90%;  margin: 0 auto;">
+      <button type='button' class='btn  btn-default btn-xs' onclick="exportToCSV()"> Export to CSV </button>
        <div> <table class="table table-condensed table-striped table-responsive text-center table-hover" id="detailedTable">  </table> </div>
    </div>
 </div>
