Added job timeline

--- a/HTML/analyze.html
+++ b/HTML/analyze.html
@@ -72,6 +72,7 @@ th {
             <div id="pieStage" style="float:left"></div>
             <div id="pieHost" style="float:left"></div>
         </div>
+        <div id="jobsStartEnd" style="width:85%; height:300px; float:left"></div>
     </div>
     <div class="tab-pane" id="charts">
       <div id="container" style="width:85%; height:500px; float:left"></div>
