--- a/HTML/analyze.html
+++ b/HTML/analyze.html
@@ -67,12 +67,15 @@ th {
 </div>
  <div id="content" class="tab-content">
     <div class="tab-pane active" id="job">
-        <div id="jobInfo" style=" margin-left : 10px;"></div>
+        <div id="jobInfo" style="width:60%; height:200px; float:left; margin-left : 10px;"></div>
+         <div id="detailsJob" style="margin: 5px; height:200px; overflow : auto; word-wrap: break-word;"></div>
+          <div id="jobsTimeline" style="width:85%; height:300px; float:left"></div>
+          <div id="stagesTimeline" style="width:85%; height:300px; float:left"></div>
         <div style="float:left">
             <div id="pieStage" style="float:left"></div>
             <div id="pieHost" style="float:left"></div>
         </div>
-        <div id="jobsStartEnd" style="width:85%; height:300px; float:left"></div>
+
     </div>
     <div class="tab-pane" id="charts">
       <div id="container" style="width:85%; height:500px; float:left"></div>
