Improved layout with affix panel

--- a/HTML/analyze.html
+++ b/HTML/analyze.html
@@ -56,126 +56,118 @@ th {
     color: black;
 }
 
+  /*fix issue where the affix will not reset after scrolling down*/
+.affix-bottom {
+    position: relative
+}
+
 </style>
 </head>
 
 <body>
-
-
-<!-- <nav class="navbar navbar-default" role="navigation">
-   <div class="navbar-header">
-      <a class="navbar-brand" href="#">Spark Log</a>
-   </div>
-   <div>
-      <ul class="nav navbar-nav">
-         <li class="active"><a href="http://www.google.com">google</a></li>
-         <li><a href="#">SVN</a></li>
-         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-               Java
-               <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-               <li><a href="#">jmeter</a></li>
-               <li><a href="#">EJB</a></li>
-               <li><a href="#">Jasper Report</a></li>
-               <li class="divider"></li>
-               <li><a href="#">Separated link</a></li>
-               <li class="divider"></li>
-               <li><a href="#">One more separated link</a></li>
-            </ul>
-         </li>
-      </ul>
-   </div>
-</nav> -->
-
-<div>
-    <ul id="tabs" class="nav nav-tabs row ">
-        <li  ><a href="#job">Job</a></li>
-        <li ><a href="#charts">Stages/Tasks</a></li>
-        <li><a href="#RDD">RDD</a></li>
-        <li><a href="#table">Details</a></li>
-    </ul>
-</div>
 <div class="container-fluid">
- <div id="content" class="tab-content">
-    <div class="tab-pane fade  " id="job">
-      <div class="row">
-       <div id="panel" class="col-md-2">
-            <div data-spy="affix" data-offset-top="10">
-                  <!-- <div class="row"> -->
-                    <!-- <div id="side-panel"    data-offset-top="10"> -->
-                 <div id="jobInfo"  ></div>
-                 <div id="detailsJob" ></div>
-                   <!-- </div> -->
-                  <!-- </div> end row -->
-                 <!-- <div class="row"> -->
-
-                <!-- </div> -->
+    <div class="col-md-10 col-md-offset-2">
+        <ul id="tabs" class="nav nav-tabs row ">
+            <li><a href="#job">Job</a></li>
+            <li><a href="#charts">Stages/Tasks</a></li>
+            <li><a href="#RDD">RDD</a></li>
+            <li><a href="#table">Details</a></li>
+        </ul>
+    </div>
+    <div class="row">
+        <div id="panel" class="col-md-2">
+            <div data-spy="affix" data-offset-top="10" data-offset-bottom="20" >
+                <div id="jobInfo" class="well"></div>
+<!--                 <div id="detailsJob"></div>
+ -->                <div id="details"  class="well" style="visibility:hidden"></div>
             </div>
         </div>
-        <div class="col-md-10"  style="background-color: #FFF">
-           <div class="row">
-
-<!--         <div class="col-md-2">
- -->            <div id="pieStage" class="col-md-6" ></div>
-                <div id="pieHost" class="col-md-6"></div>
-           </div> <!-- end row -->
-           <div class="row">
-               <div id="jobsTimeline" class="col-md-12"></div>
-           </div> <!-- end row -->
-            <div class="row">
-                 <div id="stagesTimeline" class="col-md-12"></div>
-            </div> <!-- end row -->
-        </div> <!-- end col -->
-    </div> <!-- end row -->
-    </div><!-- end tab -->
-    <div class="tab-pane fade " id="charts">
-       <div class="row">
-            <div id="panel2" class="col-md-2">
-                <div data-spy="affix" data-offset-top="10">
-                    <div id="details"></div>
+        <!-- end col-->
+        <div class="col-md-10">
+            <div id="content" class="tab-content">
+                <div class="tab-pane fade  " id="job">
+                    <!--  <div class="row">
+                        <div class="col-md-12" style="background-color: #FFF"> -->
+                    <div class="row">
+                        <div id="pieStage" class="col-md-6 chart"></div>
+                        <div id="pieHost" class="col-md-6 chart"></div>
+                    </div>
+                    <!-- end row -->
+                    <div class="row">
+                        <div id="jobsTimeline" class="col-md-12 chart"></div>
+                    </div>
+                    <!-- end row -->
+                    <div class="row">
+                        <div id="stagesTimeline" class="col-md-12 chart"></div>
+                    </div>
+                    <!-- end row -->
+                    <!--  </div>
+                        end col
+                    </div> -->
+                    <!-- end row -->
                 </div>
-            </div>  <!-- end col -->
-            <div class="col-md-10">
-                  <div id="container" class="col-md-10"></div>
-                  <div id="shuffleWrite" class="col-md-10"></div>
-                  <div id="tasksTime" class="col-md-10"></div>
-                  <div id="boxplot" class="col-md-10"></div>
-                  <div id="tasksMemory" class="col-md-10"></div>
-            </div> <!-- end col -->
+                <!-- end tab -->
+                <div class="tab-pane fade " id="charts">
+                    <div class="row">
+                        <!-- <div class="col-md-12"> -->
+                        <div id="container" class="col-md-12 chart"></div>
+                        <div id="shuffleWrite" class="col-md-12 chart"></div>
+                        <div id="tasksTime" class="col-md-12 chart"></div>
+                        <div id="boxplot" class="col-md-12 chart"></div>
+                        <div id="tasksMemory" class="col-md-12 chart"></div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+                <div class="tab-pane fade " id="RDD">
+                    <div class="row">
+                        <div id="rddMemory" class="col-md-11 chart"></div>
+                        <div id="rddButton" class="col-md-1">
+                            <input type="radio" name="rddX" class="mychart" id="rdd" value="rdd" onclick="rddX()" checked>RDD
+                            <input type="radio" name="rddX" class="mychart" id="time" value="time" onclick="rddX()">Time
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="timeMemory" class="col-md-12 chart"></div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="table">
+                    <div class="row">
+                        <button type='button' class='btn  btn-default btn-xs' onclick="exportToCSV()"> Export to CSV </button>
+                    </div>
+                    <div class="row">
+                        <div>
+                            <table class="table table-condensed table-striped table-responsive text-center table-hover" id="detailedTable"> </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-
-
-    <div class="tab-pane fade " id="RDD">
-       <div class="row">
-             <div id="rddMemory" class="col-md-11"></div>
-             <div id="rddButton" class="col-md-1">
-                  <input type="radio" name="rddX" class="mychart" id= "rdd" value="rdd" onclick= "rddX()" checked>RDD
-                  <input type="radio" name="rddX" class="mychart" id= "time" value="time" onclick= "rddX()">Time
-            </div>
-        </div>
-        <div class="row">
-             <div id="timeMemory" class="col-md-12"></div>
-         </div> <!-- end row-->
-   </div>
-
-
-   <div class="tab-pane" id="table" style="width:90%;  margin: 0 auto;">
-      <button type='button' class='btn  btn-default btn-xs' onclick="exportToCSV()"> Export to CSV </button>
-       <div> <table class="table table-condensed table-striped table-responsive text-center table-hover" id="detailedTable">  </table> </div>
-   </div>
 </div>
-</div>
+
+
+
 
   <script>
      $.get("EVENT_LOG_1", parseLog);
      //Call to enable Bootstrap 3 tabs
     $('#tabs a').click(function (e) {
       $(this).tab('show')
-    })
+      //reflow all charts from this tab
+       //chart.reflow()
+     //  debugger
+       var target = $($(this).attr('href'))
+
+       $(".chart",target).each(function(i,e){
+         console.log(e)
+         //new a setTimeout to wait for the animation to  complete
+         setTimeout(function(){ $(e).highcharts().reflow()},200)
+       })
+   })
+
+      //  $("#rddMemory").highcharts().reflow(); }, 500)
+
+
 
     $(function() {
      var $affixElement = $('div[data-spy="affix"]');
